--- a/pipelines.yml
+++ b/pipelines.yml
@@ -30,7 +30,6 @@ resources:
 pipelines:
   - name: helm_blue_green_pipeline
     steps:
-
       - name: docker_build
         type: DockerBuild
         configuration:
@@ -61,7 +60,7 @@ pipelines:
         type: HelmPublish
         configuration:
           helmVersion: 3
-          chartPath: "./chart/app"
+          chartPath: "./chart"
           lint: true
           autoPublishBuildInfo: false
           inputSteps:
@@ -74,7 +73,7 @@ pipelines:
         execution:
           onStart:
             - CHART_VERSION=0.0.$run_number
-            - pushd $res_app_gitrepo_resourcePath/chart/app
+            - pushd $res_app_gitrepo_resourcePath/chart
             - "sed -ie \"s/^version: .*$/version: $CHART_VERSION/\" Chart.yaml"
             - "sed -ie \"s/^appVersion: .*$/appVersion: $CHART_VERSION/\" Chart.yaml"
             - popd
