--- a/values.yml
+++ b/values.yml
@@ -1,18 +1,18 @@
 gitRepo:
   gitProvider: my_github
-  path: elioengcomp/jfrog-pipelines-helm-blue-green-sample
+  path: jfrog/jfrog-pipelines-helm-blue-green-sample
   branch: main
 
 appImage:
   registry: my_artifactory
-  registryUrl: pipe5978dev7.jfrogdev.org
+  registryUrl: myartifactory.myorg.com
 
 appChart:
   sourceArtifactory: my_artifactory
 
 runtime:
   k8s_integration: my_k8s
-  namespace: pipe-master-pool
+  namespace: namespace
   blueReleaseName: app-blue
   greenReleaseName: app-green
   idleServiceName: app-idle
